# uxvmarket

./: .gitignore  README.md
docs/: Drone Motor Manufacturer Research.md  (+4 more)
extract/: .gitignore  README.md  pyproject.toml
extract/output/: cohort200_stageB_candidates.json  newsletter_digest.json  newsletter_sources_summary.json  untouched_vendors.txt
extract/src/uxv_extract/: agent.py  batch.py  canonicalize.py  cli.py  corpus.py  followups.py  loop.py  migrate.py  normalize.py  products_agent.py  schema.py  tagline_agent.py  triage_agent.py
extract/src/uxv_extract/prompts/: products.md  system.md  triage.md
extract/tests/: test_agent.py  test_batch.py  test_canonicalize.py  test_cli.py  test_corpus.py  test_followups.py  test_loop.py  test_migrate.py  test_normalize.py  test_products_agent.py  test_schema.py  test_tagline_agent.py  test_triage_agent.py
extract/tests/fixtures/corpus_min/: manifest.json  quality_report.json
extract/tests/fixtures/corpus_min/json/: 0001-home.json  0002-about.json
extract/tests/fixtures/corpus_min/markdown/: 0001-home.md  0002-about.md
extract/tests/fixtures/corpus_min/raw/: 0001-home.html  0002-about.html
extract/tests/fixtures/corpus_min/text/: 0001-home.txt  0002-about.txt
mirroring/: .gitignore  README.md  pyproject.toml
mirroring/src/uxv_mirroring/: __init__.py  browserless.py  cli.py  contracts.py  materialize.py  mirror.py  promote.py  registry.py  state.py
mirroring/tests/: test_browserless.py  test_cli.py  test_contracts.py  test_mirror.py  test_promote.py  test_registry.py  test_seed_urls.py  test_state.py
(+1770 files in other folders)
