[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "uxvmarket-extract"
version = "0.1.0"
description = "LLM extraction of cited supplier profiles from mirrored vendor corpora"
requires-python = ">=3.12"
dependencies = [
    "claude-agent-sdk>=0.1.0",
    "pydantic>=2.0.0",
    "anthropic>=0.40.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]

[project.scripts]
uxv-extract = "uxv_extract.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/uxv_extract"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
