[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "uxvmarket-mirroring"
version = "0.1.0"
description = "Browserless-first vendor evidence mirroring for UxVMarket"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.12.0",
    "httpx>=0.27.0",
    "lxml>=5.0.0",
    "pydantic>=2.0.0",
    "pypdf>=4.0.0",
    "python-dateutil>=2.8.0",
]

[project.scripts]
uxv-mirror = "uxv_mirroring.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/uxv_mirroring"]

